--- a/assets/css/pages/main.css
+++ b/assets/css/pages/main.css
@@ -1,18 +1,16 @@
-.product-item {
+.product-section {
     --main-grid-gap-x: 7.0rem;       
     --main-grid-gap-y: 7.8rem;       
     --main-section-top-space: 8.0rem; 
-    --main-card-max-width: 38.0rem;  
-}
-
-.product-item .container {
+    --main-card-max-width: 38.0rem; 
     max-width: var(--container-width); 
     margin: 0 auto;
     width: 100%;
-    box-sizing: border-box;
+    box-sizing: border-box; 
+    padding: 0 var(--container-padding);
 }
 
-.product-item .product-list {
+.product-section .product-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3열 구조 */
     column-gap: var(--main-grid-gap-x) !important;
