hotfix: 코드 원상복귀
오류 수정

--- a/assets/css/base/layout.css
+++ b/assets/css/base/layout.css
@@ -140,8 +140,7 @@ header .container {
 }
 
 .main-visual img {
-    width: 100vw;
-    /* margin-left: calc(50% - 50vw); */
+    width: 100%;
     max-width: 100%;
     height: auto;
     display: block;
